--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -29,6 +29,7 @@ $blueDark:				#008AB2;
 $blueDarker:            #0077A8;
 $green:                 #46a546 !default;
 $red:                   #9d261d !default;
+$linkRed:				#D53F55;
 $yellow:                #ffc40d !default;
 $orange:                #f89406 !default;
 $pink:                  #c3325f !default;
