--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -39,7 +39,7 @@ b { font-weight: 500; }
 #searchbar .search form { margin-bottom: 10px; }
 #searchbar .search form fieldset { width: 85%; display: inline-block; }
 #searchbar .search .mglass { position: relative; margin-bottom: -62px; margin-left: 5px; margin-top: 0px; }
-#searchbar .search #Search { display: inline-block; width: 80%; }
+#searchbar .search #Search { display: inline-block; width: 80%; margin-right: 0px; }
 #searchbar .search #Search input { width: 90%; height: 35px; border: none; padding-left: 40px; }
 #searchbar .search #Search ::-webkit-input-placeholder { font-size: 14px; color: #535353; }
 #searchbar .search #Search :-moz-placeholder { font-size: 14px; color: #535353; }
@@ -237,7 +237,7 @@ b { font-weight: 500; }
   #footer { width: 100%; background: #414141; position: relative; }
   #footer span { color: white; font-weight: bold; }
   #footer .container { height: 100%; padding-left: 20px; padding-right: 20px; padding-bottom: 30px; padding-top: 30px; }
-  #footer .container .section { display: inline-block; width: 49%; }
+  #footer .container .f-section { display: inline-block; width: 49%; }
   #footer .container #meeting-list { display: none; }
   #footer .container .element-outer { height: 100%; padding-right: 0px; border: none; }
   #footer .container .element-inner { border: none; padding-top: 0px; }
@@ -249,13 +249,12 @@ b { font-weight: 500; }
   #SessionsHolder #filter-wrap #Topic ul li input { display: block; }
   #navigation .navbar-inner .container .btn-navbar { margin-top: 10px; }
   #navigation .navbar-inner .container .social-icons { display: none !important; }
-  #searchbar .search fieldset { width: 100%; }
-  #searchbar .search fieldset #Search { display: inline-block; width: 80%; }
+  #searchbar .search fieldset { width: 100% !important; }
+  #searchbar .search fieldset #Search { display: inline-block; width: 80%; margin-right: 0px; }
   #searchbar .search fieldset #Search input { width: 85%; }
   #SessionController .social-icons .span3 { width: 45%; margin-left: 2.5%; margin-right: 2.5%; padding-bottom: 10px; }
   #SessionController .social-icons .span3 .view-count { width: 65px; }
   #meetings-wrap .span3 { height: 150px; }
   #MeetingController .section { padding: 0px !important; height: 95px; margin-left: 0px !important; }
   #MeetingController .section .social { width: 200px; text-align: center; padding-top: 8px; padding-left: 6px; }
-  #MeetingController .section .social .span4 { margin-right: 18px; display: inline-block; width: 20%; }
   #MeetingController .right-divide { padding-left: 10px !important; border-right: 1px #d8d8d8 solid; } }
