--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -644,12 +644,13 @@ b{
 	.thumbnail {
 		@include border-radius(0);
 		text-decoration: none;
-		min-height: 140px;
+		min-height: 300px;
 	}
 
 	#meetings-wrap{
 		padding-top: 30px;
 		padding-bottom: 100px;
+		min-height: 300px;
 
 		.first{
 			margin-left: 0px;
@@ -965,43 +966,43 @@ b{
 		margin-left: -20px;
 		margin-right: -20px;
 
-		.logo{
-			display: none;
-		}
+		
 		.search{
-			fieldset{
-				width:100%;
+			form{
+				fieldset{
+					width:100%;
+				}
 			}
-			.mglass{
-				margin-left: 25px;
-			}
-			
-			#Search{
-				padding-left: 20px;
-				width: 60%;
+				.mglass{
+					margin-left: 25px;
+				}
 				
-				input{
-					width:60%;
-				}
+				#Search{
+					padding-left: 20px;
+					width: 60%;
+					
+					input{
+						width:60%;
+					}
 
-				::-webkit-input-placeholder { 
-					font-size: 14px;
-				    color:    $white;
-				}
-				:-moz-placeholder { 
-					font-size: 14px;
-				    color:    $white;
-				}
-				::-moz-placeholder {
-					font-size: 14px;
-				    color:    $white;
-				}
-				:-ms-input-placeholder { 
-					font-size: 14px;
-				    color:    $white;
+					::-webkit-input-placeholder { 
+						font-size: 14px;
+					    color:    $white;
+					}
+					:-moz-placeholder { 
+						font-size: 14px;
+					    color:    $white;
+					}
+					::-moz-placeholder {
+						font-size: 14px;
+					    color:    $white;
+					}
+					:-ms-input-placeholder { 
+						font-size: 14px;
+					    color:    $white;
+					}
 				}
 			}
-		}
 	}
 
 	#SessionController{
@@ -1049,24 +1050,30 @@ b{
 	}
 
 	#MeetingController{
-		.section{
-			padding: 0px !important;
-			margin-left: 0px !important;
-			
-		}
-
-		.right-divide{
-			padding-left: 10px !important;
-			border-right: 1px $grayMedium solid;
 		
-		}
-		.social{
-			text-align: center;
+		.section{
+			min-height: 102px!important;
+			padding: 3px !important;
 
-			.span4{
-				display: inline-block;
-				width: 30%;
+			.social{
+				width:100%;
+				text-align: center;
+				padding-bottom: 15px;
+		
+				.span3{
+					display: inline-block;
+					width: 45%;
+					.st_googleplus_vcount{
+						margin-left: 20px;
+					}
+				}
 			}
+		}
+
+		.section.right-divide{
+	
+			border-bottom: 1px $grayMedium solid;
+			border-right: none;
 		}
 	}
 	.sessions{
@@ -1150,6 +1157,8 @@ b{
 			}
 		}
 	}
+
+	
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
@@ -1228,30 +1237,39 @@ b{
 		}	
 	}
 
-	#meetings-wrap{
-		.span3{
-			height:150px;
+	#MeetingsHolder{
+		.thumbnail {
+			@include border-radius(0);
+			text-decoration: none;
+			min-height: 280px;
+		}
+
+		#meetings-wrap{
+			padding-top: 30px;
+			padding-bottom: 100px;
+			min-height: 200px;
 		}
 	}
 
 	#MeetingController{
 		.section{
-			padding: 0px !important;
-			height: 95px;
+			width:100%;
+			padding: 3px !important;
 			margin-left: 0px !important;
 
 			.social{
-				width: 200px;
+				width:100%;
 				text-align: center;
-				padding-top: 8px;
-				padding-left: 6px;
+				padding-left: 25px;
+
 
 			}
 		}
 
-		.right-divide{
-			padding-left: 10px !important;
-			border-right: 1px $grayMedium solid;
+		.section.right-divide{
+			
+			border-bottom: 1px $grayMedium solid;
+			border-right: none;
 		}
 	}
 }
