--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -24,7 +24,7 @@ $white:                 #fff !default;
 // Accent colors
 // -------------------------
 $blueLight:				#42A1FC;
-$blue:                  #00A9D8;
+$blue:                  #0098CD;
 $blueDark:				#008AB2;
 $blueDarker:            #0077A8;
 $green:                 #46a546 !default;
