--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -60,21 +60,28 @@ b{
 	font-weight: 500;
 }
 
+.blue{
+	color: $blue;
+}
+
 
 /* Navigation -------------------------------------------------- */
 #navigation {
-	font-family: Georgia, serif;	
+	height:75px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 	.navbar-inner {
+		height:75px;
 		background: $grayDarkest;
 
 		.container {
 			.brand {
-				padding-top: 12px;
+				padding-top: 23px;
 				padding-right: 15px;
 				padding-bottom: 16px;
 			}
 			.social-icons {
-				padding-top:15px;
+				padding-top:21px;
 				margin-right: 5px;
 				a {
 					padding: 0 1px;
@@ -83,12 +90,17 @@ b{
 
 			ul{
 				margin-left: 70px;
-				font-size: 15px;
+				font-size: 17px;
 				letter-spacing: 1px;
 				font-weight: 500 !important;
+
+				.blue{
+					color: $blue;
+				}
+
 				li {
 					a {
-						padding: 19px 2px 2px 3px;
+						padding: 28px 2px 4px 3px;
 						margin-left: 20px;
 						margin-right: 20px;
 						color: $white;
@@ -99,8 +111,11 @@ b{
 
 						&:hover {
 							background:none;
-							border-bottom: 2px $linkRed solid;
+							border-bottom: 2px $blue solid;
 						}
+					}
+					.blue{
+						color: $blue;
 					}
 
 					&.active {
@@ -108,7 +123,7 @@ b{
 						a {
 							color:white;
 							background: $grayDarkest;
-							border-bottom: 2px $linkRed solid;
+							border-bottom: 2px $blue solid;
 						}
 					}
 				}		
@@ -449,6 +464,9 @@ b{
 					}
 				}
 			}
+			.underline{
+				text-decoration: underline;
+			}
 		}
 
 		.tags{
@@ -521,6 +539,7 @@ b{
 				top: 0px;
 			
 			}
+			
 
 			.icon{
 				position: relative;
