--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -89,7 +89,7 @@ b{
 			}
 
 			ul{
-				margin-left: 70px;
+				margin-left: 40px;
 				font-size: 17px;
 				letter-spacing: 1px;
 				font-weight: 500 !important;
@@ -102,8 +102,8 @@ b{
 					z-index: 2;
 					a {
 						padding: 28px 2px 4px 3px;
-						margin-left: 20px;
-						margin-right: 20px;
+						margin-left: 10px;
+						margin-right: 10px;
 						color: $white;
 						text-shadow: 0.5px 0px $gray;
 						line-height: 12px;
@@ -666,19 +666,24 @@ b{
 	.thumbnail {
 		@include border-radius(0);
 		text-decoration: none;
-		min-height: 300px;
+		min-height: 305px;
 	}
 
 	#meetings-wrap{
 		padding-top: 30px;
 		padding-bottom: 100px;
-		min-height: 300px;
+	
+
+		.img-wrap{
+			min-height: 5px;
+		}
 
 		.first{
 			margin-left: 0px;
 		}
 		.span3{
 			margin-bottom: 30px;
+		
 		}
 
 		a{
@@ -862,6 +867,19 @@ b{
 		}
 	}
 }
+#navigation {
+
+
+	.navbar-inner {
+	
+
+		.container {
+			
+
+			ul{
+				margin-left: 20px;
+			}
+			}}}
 
 @media (max-width: 767px) {
 	body{
