Changed footer and nav background Made arrow clickable on Meeting controller

--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -13,6 +13,7 @@ $black:                 #000 !default;
 $grayDarkest:            #414141; 
 $grayDarker:             #5E5E5E;
 $grayDark:				 #535353;
+$grayAlt:               #323232;
 $gray:                  #696B6F;
 $grayFade:				#919294;
 $grayMedium:			#D8D8D8;
