--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -72,7 +72,7 @@ b{
 
 	.navbar-inner {
 		height:75px;
-		background: $grayDarkest;
+		background: $grayAlt;
 
 		.container {
 			.brand {
@@ -107,13 +107,13 @@ b{
 						color: $white;
 						text-shadow: 0.5px 0px $gray;
 						line-height: 12px;
-						border-bottom: 2px $grayDarkest solid;
+						border-bottom: 2px $grayAlt solid;
 						box-shadow: none;
-						background: $grayDarkest;
+						background: $grayAlt;
 						z-index: 2;
 
 						&:hover {
-							background: $grayDarkest;
+							background: $grayAlt;
 							border-bottom: 2px $blue solid;
 						}
 					}
@@ -125,7 +125,7 @@ b{
 
 						a {
 							color:white;
-							background: $grayDarkest;
+							background: $grayAlt;
 							border-bottom: 2px $blue solid;
 						}
 					}
@@ -206,7 +206,7 @@ b{
 /*Footer -------------------------------------------------- */
 #footer{
 	width: 100%;
-	background: $grayDarkest;
+	background: $grayAlt;
 	position: relative;
 
 	span{
@@ -250,7 +250,7 @@ b{
 				a{
 					color: $white;
 					font-size: 14px;
-					text-shadow: 0px -2px 1px $grayDarkest;
+					text-shadow: 0px -2px 1px $grayAlt;
 
 					&:hover{
 						text-decoration: none;
