--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -73,16 +73,21 @@ b { font-weight: 500; }
 #footer .container .website a { color: white; letter-spacing: 1px; text-decoration: underline; }
 
 /*HomePage -------------------------------------------------- */
+#HomePage .text { font-family: Georgia, serif; color: #414141; }
 #HomePage .content { padding-top: 50px; padding-bottom: 50px; }
-#HomePage .content .text { font-family: Georgia, serif; color: #414141; font-size: 35px; line-height: 35px; }
+#HomePage .content .text { font-size: 35px; line-height: 35px; }
 #HomePage .twitter { margin-bottom: 50px; border: 1px solid #d8d8d8; }
 #HomePage .speakers { padding-bottom: 50px; }
 #HomePage .speakers .link { text-align: right; padding-top: 20px; text-decoration: underline; }
 #HomePage .sessions .heading h3 { font-family: Georgia, serif; }
-#HomePage .tags-wrap { margin-bottom: 40px; border: 1px #d8d8d8 solid; background: #f3f3f3; min-height: 100px; }
-#HomePage .tags-wrap .tags { padding: 10px; }
-#HomePage .tags-wrap .tags h5 { font-family: Georgia, serif; font-weight: normal; font-size: 22px; color: #414141; }
-#HomePage .tags-wrap a { text-decoration: none; }
+#HomePage .sub-main .span6 { margin-bottom: 40px; border: 1px #d8d8d8 solid; min-height: 100px; padding: 10px 20px; height: 240px; }
+#HomePage .sub-main .span6.topics { background: #f3f3f3; }
+#HomePage .sub-main .span6.topics ul { margin: 0px; }
+#HomePage .sub-main .span6.topics ul li { display: inline-block; list-style-type: none; width: 49%; }
+#HomePage .sub-main .span6.featured h3 { font-size: 28px; line-height: 28px; }
+#HomePage .sub-main .span6.featured h4 { font-weight: normal; font-size: 16px; }
+#HomePage .sub-main h3 { margin-bottom: 10px; }
+#HomePage .sub-main a { text-decoration: none; }
 
 /*SessionsHolder -------------------------------------------------- */
 #SessionsHolder .topic-filt { background: #f3f3f3; border: 1px solid #d8d8d8; padding-top: 10px; margin-top: 10px; }
