--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -365,10 +365,10 @@ b{
 			}
 			&.featured{
 				.span8{
-					padding:20px;
+					padding: 10px 0px;
 				}
 				img{
-					padding-top: 20px;
+					padding: 10px 0px;
 				}
 
 				h3{
