Added styling for twitter box

--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -140,6 +140,11 @@ b{
 	margin-top: -1px;
 	background: $blue;
 
+	.twitter{
+		text-align: right;
+		margin-top: 15px;
+	}
+
 	.search{
 		margin-top: -10px;
 
