--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -40,6 +40,7 @@ b { font-weight: 500; }
 
 /* Search -------------------------------------------------- */
 #searchbar { margin-top: -1px; background: #0098cd; }
+#searchbar .twitter { text-align: right; margin-top: 15px; }
 #searchbar .search { margin-top: -10px; }
 #searchbar .search form { margin-bottom: 10px; }
 #searchbar .search form fieldset { width: 85%; display: inline-block; }
@@ -88,7 +89,6 @@ b { font-weight: 500; }
 #HomePage .sub-main .span6.featured img { padding: 10px 0px; }
 #HomePage .sub-main .span6.featured h3 { font-size: 28px; line-height: 28px; }
 #HomePage .sub-main .span6.featured h4 { font-weight: normal; font-size: 16px; }
-#HomePage .sub-main h3 { /*	margin-bottom: 10px;*/ }
 #HomePage .sub-main a { text-decoration: none; }
 
 /*SessionsHolder -------------------------------------------------- */
