--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -52,6 +52,8 @@ h4{
 	color: $grayFade;
 }
 
+
+
 .small{
 	font-size: 12px;
 }
@@ -59,6 +61,7 @@ h4{
 b{
 	font-weight: 500;
 }
+
 
 .blue{
 	color: $blue !important;
@@ -350,6 +353,7 @@ b{
 	}
 
 	.sub-main{
+
 		.span6{
 			margin-bottom: 40px;
 			border: 1px $grayMedium solid;
@@ -358,10 +362,12 @@ b{
 			height: 230px;
 			
 			&.topics{
+
 				background: $grayLighter;
 				ul{
 					margin: 0px;
 					li{
+						vertical-align: top;
 						display: inline-block;
 						list-style-type: none;
 						width:49%;
@@ -369,6 +375,7 @@ b{
 				}
 			}
 			&.featured{
+				
 				.span8{
 					padding: 10px 0px;
 				}
@@ -590,12 +597,14 @@ b{
 		.text-wrap{
 			padding: 4px;
 			margin: 5px;
-			
+
 			.title{
 				font-family: Georgia, serif;
 				color: $grayDarkest;
 				font-size: 14px;
 			}
+						
+			
 
 			p{
 				padding: 0;
@@ -663,6 +672,8 @@ b{
 	}
 
 	.session-side{
+		margin-bottom: 10px;
+
 		a{
 			text-decoration: underline;
 		}
@@ -681,6 +692,34 @@ b{
 		}
 	}
 
+	#Form_TagForm{
+		margin-bottom: 0px;
+		label{
+			font-weight: bold;
+			font-size: 14px;
+		}
+		fieldset{
+			display: inline-block;
+			width:70%;
+			#Tags{
+				
+				input{
+					width:100%;
+					padding:10px;
+					margin-bottom: 0px;
+				}
+			}
+			
+		}
+
+		
+		.Actions{
+			text-align: right;
+			margin-bottom: 10px;
+			display: inline-block;
+			width:28%;
+		}
+	}
 
 }
 
@@ -868,6 +907,37 @@ b{
 	}
 }
 
+/* Regional and National IGFS */
+#Regional{
+	margin: 10px;
+	#Regional-Meetings{
+		.regional-tile{
+			
+			margin-bottom: 20px;
+			border: 1px solid $grayMedium;
+			padding: 20px;
+
+			a, p, h4{
+				word-wrap:break-word;
+			}
+
+			h4{
+				margin-top: 0px;
+				font-family: Georgia, serif;
+				color: $grayDarkest;
+
+			}
+
+			&.first{
+				margin-left: 0px;
+			}
+		}
+	}
+
+}
+
+
+
 /*Responsiveness -------------------------------------------------- */
 
 @media (min-width: 1200px) {
@@ -893,6 +963,13 @@ b{
 	}
 }
 @media (max-width: 1200px) {
+	#HomePage{
+		.sub-main{
+			.span6{
+				height:270px;
+			}
+		}
+	}
 
 	#filter-wrap{
 		form{
@@ -998,6 +1075,28 @@ b{
 	}
 
 	#HomePage{
+	.sub-main{
+
+		.span6{
+		
+			height: 100%;
+			
+			
+			&.featured{
+			
+				.span8{
+					display: inline-block;
+					width:70%;
+					vertical-align: middle;
+				}
+				.span4{
+					display: inline-block;
+					width: 20%;
+					
+				}
+			}
+		}
+	}
 		h3{
 			font-size: 20px;
 		}
@@ -1246,6 +1345,13 @@ b{
 @media (min-width: 768px) and (max-width: 979px) {
 
 	#HomePage{
+		.sub-main{
+			.span6{
+				height:310px;
+			}
+		}
+	
+
 		.content{
 			.span1{
 				padding-top: 30px;
